--- a/ex011/index.html
+++ b/ex011/index.html
@@ -14,5 +14,11 @@
         <source media="(max-width: 1000px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
+
+    <h1>Reproduzindo Áudio</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5.</p>
+    <audio src="">
+        <source>
+    </audio>
 </body>
 </html>
